Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1457

transforms during video requests cause massive memory growth

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 3.2.0
    • 3.3.1
    • Core
    • None
    • Linux RHEL6.2

    Description

      Running the null-transform example object over 3.2.0, shows massive memory growth -
      This could be seen on our system since using 3.2.0 with custom plugin which invokes transforms - under load ~6K and with video content (only Video - small files are ok), a huge growth was seen (GB's) such that it crashes the load test machine.

      heap profiles are attached for comparison:
      -null transform example so over 3.2.0
      -NO null transform over 3.2.0
      -null transform example so over 3.0.2

      As can be seen no issue in 3.0.2 -
      The profiles show clearly the call chain is different for both releases

      Attachments

        1. 3.0.3-null-massif.txt
          197 kB
          Aidan McGurn
        2. 3.0.5-null-massif.txt
          230 kB
          Aidan McGurn
        3. alan-8Kperm-fix-massif.txt
          860 kB
          Aidan McGurn
        4. alan-chunk-fix-3.2.0-null.txt
          905 kB
          Aidan McGurn
        5. alan-nofix-3.2.0-null.txt
          158 kB
          Aidan McGurn
        6. alan-NO-fix-massif.txt
          129 kB
          Aidan McGurn
        7. alan-perm-fix-massif.txt
          560 kB
          Aidan McGurn
        8. no-null-3.2.0-massif.txt
          510 kB
          Aidan McGurn
        9. null-3.0.2-massif.txt
          242 kB
          Aidan McGurn
        10. null-3.2.0-massif.txt
          128 kB
          Aidan McGurn
        11. ts-1457-patch-1.diff
          2 kB
          Alan M. Carroll

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              amcgurn Aidan McGurn
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: