TS-1457 Fix excessive memory use for transforms.